--- a/public/locales/en/projects.json
+++ b/public/locales/en/projects.json
@@ -3,7 +3,7 @@
     "projects": {
         "afflelou": {
             "name": "Alain Afflelou",
-            "desc": "An international e-commerce platform dedicated to eyewear, along with its back-office management system."
+            "desc": "An international e-commerce platform dedicated to eyewear."
         },
         "vamos": {
             "name": "Vamos!",
