--- a/public/locales/en/reviews.json
+++ b/public/locales/en/reviews.json
@@ -7,7 +7,7 @@
         },
         "ibrahim_b": {
             "name": "Ibrahim B., UX/UI Designer",
-            "comment": "I worked with Mathieu for over 3 years at Extia, on the Vamos team, where he worked as a React front-end developer on our internal CRM. He's someone who's highly involved, serious about his work, always open to feedback, and with a real desire to improve. He always took feedback constructively, and it showed in the quality of his work. Besides being a good developer, he's also a really nice person, always willing to lend a hand and bring good vibes to the team. In short, a real pleasure to work with. I recommend him without hesitation!"
+            "comment": "I worked with Mathieu for over 3 years at Extia, in the Vamos team, where he was a React front-end developer on our internal CRM. He’s dedicated, reliable, always attentive, and takes feedback constructively, which really shows in the quality of his work. Beyond being a great developer, he’s friendly, helpful, and brings a positive vibe to the team. It was a real pleasure working with him. I highly recommend him!"
         }
     }
 }
