--- a/public/locales/fr/projects.json
+++ b/public/locales/fr/projects.json
@@ -3,7 +3,7 @@
     "projects": {
         "afflelou": {
             "name": "Alain Afflelou",
-            "desc": "Une plateforme e-commerce internationale dédiée à l'optique, accompagnée de son système de gestion back-office."
+            "desc": "Une plateforme e-commerce internationale dédiée à l'optique"
         },
         "vamos": {
             "name": "Vamos!",
