--- a/public/locales/fr/reviews.json
+++ b/public/locales/fr/reviews.json
@@ -7,7 +7,7 @@
         },
         "ibrahim_b": {
             "name": "Ibrahim B., UX/UI Designer",
-            "comment": "J’ai bossé avec Mathieu pendant plus de 3 ans chez Extia, dans la team Vamos, où il intervenait comme développeur front-end React sur notre CRM interne. C’est quelqu’un de super impliqué, sérieux dans son taf, toujours à l’écoute des retours et avec une vraie envie de progresser. Il a toujours su prendre les feedbacks de manière constructive, et ça se sentait dans la qualité de son travail. En plus d’être un bon dev, c’est aussi une personne vraiment sympa, toujours partant pour filer un coup de main et mettre une bonne ambiance dans l’équipe. Bref, un vrai plaisir de bosser avec lui. Je le recommande les yeux fermés !"
+            "comment": "J’ai bossé plus de 3 ans avec Mathieu chez Extia, dans la team Vamos, où il était développeur front React sur notre CRM. Impliqué, sérieux et toujours à l’écoute, il prend les retours de façon constructive et ça se voit dans la qualité de son travail. Au-delà d’être un très bon dev, c’est quelqu’un de sympa, dispo pour aider et mettre une bonne ambiance. Un vrai plaisir de bosser avec lui. Je le recommande les yeux fermés !"
         }
     }
 }
